--- a/assets/styles/partials/_filter.scss
+++ b/assets/styles/partials/_filter.scss
@@ -9,7 +9,7 @@
 }
 
 .label {
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
 }
 
 .row.email {
@@ -24,4 +24,12 @@
 
 .col-md-6.button-filter {
     display: contents;
+}
+
+.title-filter {
+    text-align: center;
+}
+
+.row-filter-template {
+    margin: 0rem 18rem;
 }
