--- a/assets/styles/partials/_show.scss
+++ b/assets/styles/partials/_show.scss
@@ -28,3 +28,12 @@
 .show {
     margin-top: 2rem;
 }
+
+.information-show {
+    font-size: 1rem;
+}
+
+.entity-contact {
+    margin-bottom: 0 !important;
+    font-size: 1.5rem;
+}
