--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -6,7 +6,7 @@
         </div>
     {% endif %}
     <div class="opt-logo">
-        <img class="img-logo" src="https://cdn-icons-png.flaticon.com/512/126/126481.png" alt="OptiSport-logo">
+        <img class="img-logo" src="{{asset('img/optiLogo.svg')}}" alt="OptiSport-logo">
     </div>
     <div class="text-logo-hdr">
         <h2>Gestion</h2>
