--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -48,8 +48,8 @@
                 </p>
             </div>
             <nav class="home-nav">
-                <a class="btn btn-outline-primary btn-large" href="{{ asset('partner') }}">Gérer les partenaires</a>
-                <a class="btn btn-outline-primary btn-large" href="{{ asset('structure') }}">Gérer les Structures</a>
+                <a class="btn btn-outline-primary btn-lg" href="{{ asset('partner') }}">Gérer les partenaires</a>
+                <a class="btn btn-outline-primary btn-lg" href="{{ asset('structure') }}">Gérer les Structures</a>
             </nav>
         </div>
 
@@ -84,7 +84,7 @@
                 <p class="module-text"> {{ activePartnersNumber}} partenaire(s) actif </p>
 
                 <div class="module-btn">
-                    <a class="btn btn-outline-primary btn-large" href="{{ asset('partner') }}">Voir nos Partenaires</a>
+                    <a class="btn btn-outline-primary btn-lg" href="{{ asset('partner') }}">Voir nos Partenaires</a>
                 </div>
             </div>
         <div>
@@ -120,7 +120,7 @@
                 <p class="module-text"> {{ activeStructuresNumber }} structure(s) active(s) </p>
 
                 <div class="module-btn">
-                    <a class="btn btn-outline-primary btn-large" href="{{ path('app_structure') }}">Voir nos Structures</a>
+                    <a class="btn btn-outline-primary btn-lg" href="{{ path('app_structure') }}">Voir nos Structures</a>
                 </div>
             </div>
         <div>
