--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -14,6 +14,7 @@
 @import 'partials/table';
 @import 'partials/show';
 @import 'partials/card';
+@import 'partials/edit';
 @import 'partials/footer';
 
 html, body {
