--- a/templates/partner/_delete_form.html.twig
+++ b/templates/partner/_delete_form.html.twig
@@ -1,3 +1,3 @@
 <form method="post" action="{{ path('delete_partner', {'id': partner.id}) }}" onsubmit="return confirm('Voulez-vous supprimer ce partenaire ?');">
-    <button class="btn btn-outline-danger">Supprimer</button>
+    <button class="btn btn-outline-danger btn-lg">Supprimer</button>
 </form>
