--- a/templates/partner/index.html.twig
+++ b/templates/partner/index.html.twig
@@ -24,8 +24,7 @@
                 neque quasi ex quis consectetur.
             </p>
             <div class="status">
-                <p class="module-text entity-status"> {{ partners | length }} partenaire(s) OptiSport au total </p>
-                <p class="module-text entity-status"> {{ activePartners | length}} partenaire(s) OptiSport actif </p>
+                <p class="module-text entity-status"> {{ partners | length }} partenaire(s) OptiSport enregistré</p>
             </div>
             <div class="add-entity">
                 <a class="btn btn-outline-success btn-lg" href="{{ path('new_partner') }}">Ajouter un partenaire</a>
@@ -101,7 +100,7 @@
                                 <td class="partnerActions">
                         
                                     <a class="btn btn-outline-primary btn-entity-show" href="{{ path('app_partner_show', {id: partner.id}) }}">Voir</a>
-                                    <a class="btn btn-outline-primary btn-entity-show" href="{{ path('edit_partner', {id: partner.id}) }}">Modifier</a>
+                                    <a class="btn btn-outline-warning btn-entity-show" href="{{ path('edit_partner', {id: partner.id}) }}">Modifier</a>
                                     {% if partner.isActive %}
                                         <button data-partner="{{partner.id}}" class="btn btn-outline-danger activatePartner deactivate">Désactiver</button> 
                                     {% else %}
