--- a/templates/structure/_delete_form.html.twig
+++ b/templates/structure/_delete_form.html.twig
@@ -1,3 +1,3 @@
 <form method="post" action="{{ path('delete_structure', {'id': structure.id}) }}" onsubmit="return confirm('Voulez-vous supprimer cette structure?');">
-    <button class="btn btn-outline-danger">Supprimer</button>
+    <button class="btn btn-outline-danger btn-lg">Supprimer la Structure</button>
 </form>
