--- a/templates/template/_delete_form.html.twig
+++ b/templates/template/_delete_form.html.twig
@@ -1,3 +1,3 @@
-<form method="post" action="{{ path('delete_template', {'id': template.id}) }}" onsubmit="return confirm('Voulez-vous supprimer ce package Optisport ? Les partenaires perdront les droits aux modules compris dans ce package');">
-    <button class="btn btn-outline-danger">Supprimer</button>
+<form class="btn btn-outline-danger" method="post" action="{{ path('delete_template', {'id': template.id}) }}" onsubmit="return confirm('Voulez-vous supprimer ce package Optisport ? Les partenaires perdront les droits aux modules compris dans ce package');">
+    <button class="btn-del">Supprimer</button>
 </form>
