Ajout de la l'activation / deésactivation Structure

--- a/templates/partner/index.html.twig
+++ b/templates/partner/index.html.twig
@@ -3,6 +3,7 @@
 {% block javascripts %}
         {{ encore_entry_script_tags('partnerFilter') }}
         {{ encore_entry_script_tags('partnerStatusFilter') }}
+         {{ encore_entry_script_tags('activatePartner') }}
 		{{ parent() }}
  {% endblock %}
 
