--- a/templates/mods/_delete_form.html.twig
+++ b/templates/mods/_delete_form.html.twig
@@ -1,3 +1,3 @@
 <form method="post" action="{{ path('delete_module', {'id': module.id}) }}" onsubmit="return confirm('Voulez-vous supprimer ce module ?');">
-    <button class="btn btn-outline-danger btn-lg">Supprimer</button>
+    <button class="btn btn-outline-danger">Supprimer</button>
 </form>
