--- a/templates/structure/show.html.twig
+++ b/templates/structure/show.html.twig
@@ -23,7 +23,9 @@
       {% if app.user and ('ROLE_ADMIN') in app.user.roles %}
         <div class="entity-action-show">
             <a class="btn btn-outline-success btn-lg" href="{{ path('edit_structure', {id: structure.id}) }}">Modifier la structure</a>
-            <a class="btn btn-outline-success btn-lg" href="{{ path('edit__module_right_structure', {id: structure.id}) }}">Modifier les droits de la structure</a>
+            {% if isActiveStructure %}
+                <a class="btn btn-outline-success btn-lg" href="{{ path('edit__module_right_structure', {id: structure.id}) }}">Modifier les droits de la structure</a>
+            {% endif %}
         </div>
       {% endif %}
     </header>
