--- a/assets/styles/partials/_show.scss
+++ b/assets/styles/partials/_show.scss
@@ -21,8 +21,7 @@
 }
 
 .entity-action-show {
-    display: flex;
-    justify-content: space-around;
+    text-align: center;
 }
 
 .show {
@@ -36,4 +35,9 @@
 .entity-contact {
     margin-bottom: 0 !important;
     font-size: 1.5rem;
+}
+
+.activate-structure {
+    text-align: center;
+    margin-bottom: 1rem;
 }
