amélioration Form entité - Ajout Label, correctif design

--- a/assets/styles/partials/_user.scss
+++ b/assets/styles/partials/_user.scss
@@ -18,5 +18,16 @@
 }
 
 .form-login {
-    margin: 3rem 0rem;
+    margin: 5rem;
 }
+
+#inputEmail {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+#inputPassword {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
