--- a/templates/mods/edit.html.twig
+++ b/templates/mods/edit.html.twig
@@ -6,6 +6,8 @@
 
 {% include 'nav.html.twig' %}
 
-{% include ('mods/_form.html.twig') %}
+<div class="form-container">
+    {% include ('mods/_form.html.twig') %}
+</div>
 
 {% endblock %}
