--- a/templates/partner/new.html.twig
+++ b/templates/partner/new.html.twig
@@ -6,7 +6,9 @@
 
 {% include 'nav.html.twig' %}
 
-{% include ('partner/_form.html.twig') %}
+<div class="form-container">
+    {% include ('partner/_form.html.twig') %}
+</div>
 
 {% endblock %}
 
