--- a/templates/structure/new.html.twig
+++ b/templates/structure/new.html.twig
@@ -6,6 +6,7 @@
 
 {% include 'nav.html.twig' %}
 
-{% include ('structure/_form.html.twig') %}
-
+<div class="form-container">
+    {% include ('structure/_form.html.twig') %}
+</div>
 {% endblock %}
