--- a/templates/mods/index.html.twig
+++ b/templates/mods/index.html.twig
@@ -45,6 +45,9 @@
             >  
             <h3 class="count-entity">{{ pluralize(modules|length, 'Module OptiSport', 'Modules OptiSport') }}</h3>
 
+            <div class="home-hdr-sep"> 
+            </div>
+
             <div class="container table-container">
                 <table class="table table-bordered table-container">
                     <thead>
