--- a/assets/styles/partials/_header.scss
+++ b/assets/styles/partials/_header.scss
@@ -104,9 +104,11 @@ nav.container-nav
     display: flex;
     justify-content: space-between;
     font-size: 1.5rem;
-    font-family: 'Julius Sans One', sans-serif;
+    text-transform: uppercase;
 }
 
 .logout {
     text-decoration: none;
+    color: $red;
+    border-color: $red;
 }
