--- a/templates/structure/index.html.twig
+++ b/templates/structure/index.html.twig
@@ -32,7 +32,12 @@
 
     <section class="module partner">
         <div class="module-content entity">
-            <nav class="list-filters">
+             <img 
+                class="entity-logo partner" 
+                src="{{asset('img/optiLogo.svg')}}"
+                alt="opti-image"
+            >  
+            {# <nav class="list-filters">
                 <h3>Filtres</h3>
                 <div class="row">
                     <div class="col-sm-8">
@@ -52,12 +57,15 @@
                         </div>
                     </div>
                 </div>
-            </nav>
+            </nav> #}
+
+            {# <div class="home-hdr-sep"> 
+            </div> #}
+
+            <h3 class="count-entity">{{ pluralize(structures|length, 'Structure OptiSport', 'Structures OptiSport') }}</h3>
 
             <div class="home-hdr-sep"> 
             </div>
-
-            <h3 class="count-entity">{{ pluralize(structures|length, 'Structure OptiSport', 'Structures OptiSport') }}</h3>
             
             <div class="resultat">
             </div>
@@ -96,11 +104,6 @@
                                 {% endif %}
                                 <td class="structureActions">
                                     <a class="btn btn-outline-primary btn-entity-show" href="{{ path('app_structure_show', {id: structure.id}) }}">Voir</a>
-                                    {# {% if structure.isActive %}
-                                        <button data-structure="{{structure.id}}" class="btn btn-outline-danger activateStructure deactivate">Désactiver</button> 
-                                    {% else %}
-                                        <button data-structure="{{structure.id}}" class="btn btn-outline-success activateStructure activate">Activer</button> 
-                                    {% endif %} #}
                                 </td>
                             </tr>
                         {% endfor %}
